# pan-meme

./: .gitignore  README.md  download_wiki.py  old_1fd886a.md  test_text.txt
pan_meme/: .editorconfig  .gitignore  LICENSE  PB_ARCHITECTURE.md  TASKS.md  __init__.py  pyproject.toml
pan_meme/config/: schema.py
pan_meme/core/: exceptions.py  pipeline.py  types.py
pan_meme/engines/: __init__.py  convergence.py  gp_optimizer.py  mapper_homology.py  minhash_lsh.py  ode_solver.py  optimizer.py  star_closure.py
pan_meme/module1_input/: __init__.py  adapter.py  completeness.py  concept_composer.py  consistency.py  cycle.py  reasoner.py  relation_extractor.py  rule_extractor.py  tokenizer.py
pan_meme/module2_geo/: field_encoder.py  geometrizer.py  invariant_encoder.py  metric_encoder.py  skeleton.py
pan_meme/module3_meme/: __init__.py  coupling.py  decomposer.py  geometry_split.py  mapping_5d.py  param_derive.py
pan_meme/module4_bind/: __init__.py  binder.py  cas_merkle.py  credential.py  hierarchy_hasher.py  merkle_tree.py
pan_meme/plugins/: __init__.py  registry.py
pan_meme/plugins/functions/: __init__.py  base.py  exp.py  log.py  piecewise.py  power.py  sigmoid.py
pan_meme/plugins/modalities/: __init__.py  base.py  image_rgb.py  structured_json.py  text_en.py  text_zh.py
pan_meme/plugins/strategies/: __init__.py
pan_meme/rust_native/: .clang-format  Cargo.toml
pan_meme/rust_native/src/: lib.rs
pan_meme/tests/: __init__.py  conftest.py
pan_meme/tests/test_e2e/: __init__.py  test_roundtrip.py
pan_meme/tests/test_module1/: __init__.py  test_adapter.py  test_completeness.py  (+4 more)
updown_rs/: .gitignore  Cargo.toml  README.md
updown_rs/benches/: pipeline.rs
updown_rs/output/: test_input.txt
updown_rs/src/: lib.rs  main.rs
updown_rs/tests/: golden_test.rs  pipeline_integration.rs  property_tests.rs
(+612 files in other folders)
