[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pan-meme"
version = "0.1.0"
description = "泛模因几何工具 — 信息-结构动力学管线"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=2.8",
    "jieba>=0.42",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]
all = [
    "pan-meme[dev]",
    "spacy>=3.5",
    "opencv-python>=4.8",
    "librosa>=0.10",
    "torch>=2.0",
    "transformers>=4.30",
]

[tool.setuptools.packages.find]
where = ["."]
