[package]
name = "pan-meme-rs"
version = "0.1.0"
edition = "2021"
description = "Rust native extensions for pan-meme: hot-path graph ops, ODE integration, sparse linalg"

[lib]
crate-type = ["cdylib"]
name = "pan_meme_rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
nalgebra = "0.33"
petgraph = "0.6"
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
